# tokio-events

./: CLAUDE.md  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml  security.yml
docs/: guide-examples.md
examples/: test.rs
src/: error.rs  lib.rs
src/bus/: builder.rs  config.rs  mod.rs
src/dispatcher/: channel.rs  mod.rs  worker.rs
src/event/: envelope.rs  metadata.rs  mod.rs
src/registry/: dashmap.rs  mod.rs
src/subscription/: handle.rs  handler.rs  mod.rs
